improve yaml file
